feat(cna): it works except for the added dependencies in pom based on the chosen database